--- a/PdfToXml/Pages/FileUpload.razor
+++ b/PdfToXml/Pages/FileUpload.razor
@@ -56,16 +56,16 @@
                     </tr>
                     @foreach (string person in persons)
                     {
-                    <tr>
-                        <td class="person">@person</td>
-                        <td>
-                            <select class="select">
-                                <option value="friendly">friendly</option>
-                                <option value="tall">tall</option>
-                                <option value="neutral">neutral</option>
-                            </select>
-                        </td>
-                    </tr>
+                        <tr>
+                            <td class="person">@person</td>
+                            <td>
+                                <select class="select">
+                                    <option value="friendly">friendly</option>
+                                    <option value="tall">tall</option>
+                                    <option value="neutral">neutral</option>
+                                </select>
+                            </td>
+                        </tr>
                     }
                 </table>
             }
@@ -244,19 +244,41 @@
                 float pageWidth = pdfDocument.GetPage(1).GetPageSize().GetWidth();
                 float pageHeight = pdfDocument.GetPage(1).GetPageSize().GetHeight();
                 Rectangle rectFull = new Rectangle(0, 50, pageWidth, pageHeight - 150);
-                Rectangle rect = new Rectangle(pageWidth / 2 - 50, 50, 40, pageHeight - 150);
+                Rectangle rect = new Rectangle(pageWidth / 2 - 50, 50, 70, pageHeight - 150);
                 TextRegionEventFilter fullFilter = new TextRegionEventFilter(rectFull);
                 TextRegionEventFilter regionFilter = new TextRegionEventFilter(rect);
 
+
                 for (int i = 1; i <= pdfDocument.GetNumberOfPages(); i++)
                 {
+                    //PdfPage page = pdfDocument.GetPage(i);
+                    //FilteredEventListener listener = new FilteredEventListener();
+                    //var strat = listener.AttachEventListener(new TextLocationStrategy());
+                    //PdfCanvasProcessor processor = new PdfCanvasProcessor(listener);
+                    //processor.ProcessPageContent(page);
+                    //string pageAllText = PdfTextExtractor.GetTextFromPage(page, strat);
+
+                    //foreach (textChunk character in strat.objectResult)
+                    //{
+                    //    if (character.rect.GetLeft() >= page.GetPageSize().GetWidth() / 2 - 50)
+                    //    {
+                    //        persons.Add(character.text);
+                    //    }
+                    //}
+
+                    //foreach (TextRenderInfo info in strat.renInfos)
+                    //{
+                        
+                    //    persons.Add(info.GetText() + " start:" + info.GetBaseline().GetStartPoint().Get(0) + " end:" + info.GetBaseline().GetEndPoint().Get(0));
+                    //}
+
+
                     PdfPage page = pdfDocument.GetPage(i);
                     ITextExtractionStrategy fullStrat = new FilteredTextEventListener(new LocationTextExtractionStrategy(), fullFilter);
                     ITextExtractionStrategy strat = new FilteredTextEventListener(new LocationTextExtractionStrategy(), regionFilter);
                     string pageAllText = PdfTextExtractor.GetTextFromPage(page, fullStrat);
                     string pageFilteredText = PdfTextExtractor.GetTextFromPage(page, strat);
-                    //string result = string.Concat(pageFilteredText.Where(c => char.IsUpper(c)));
-                    //builder.Append(str);
+
                     string[] lineAllTexts = pageAllText.Split('\n');
                     string[] lineTexts = pageFilteredText.Split('\n');
 
@@ -272,7 +294,6 @@
                             persons.Add(text);
                         }
                     }
-
 
 
                     //PdfPage page = pdfDocument.GetPage(i);
@@ -319,34 +340,79 @@
 
 
 
-    public class CustomTextExtractionStrategy : ITextExtractionStrategy
+    class TextLocationStrategy : LocationTextExtractionStrategy
     {
-        public string GetResultantText()
-        {
-            return null;
-        }
+        public List<textChunk> objectResult = new List<textChunk>();
+        public IList<TextRenderInfo> renInfos;
 
-        public void EventOccurred(IEventData iEventData, EventType eventType)
+        //private readonly List<TextRect> _textRects = new List<TextRect>();
+
+        //public List<TextRect> TextRects() => _textRects;
+
+
+        public override void EventOccurred(IEventData data, EventType type)
         {
-            if (eventType.Equals(EventType.RENDER_TEXT))
+            if (!type.Equals(EventType.RENDER_TEXT))
+                return;
+
+            TextRenderInfo renderInfo = (TextRenderInfo)data;
+
+            string curFont = renderInfo.GetFont().GetFontProgram().ToString();
+
+            float curFontSize = renderInfo.GetFontSize();
+            
+
+            //IList<TextRenderInfo> text = renderInfo.GetCharacterRenderInfos();
+            renInfos = renderInfo.GetCharacterRenderInfos();
+
+            foreach (TextRenderInfo t in renInfos)
             {
-                TextRenderInfo renderInfo = (TextRenderInfo)iEventData;
-                //String text = renderInfo.GetText();
+                string letter = t.GetText();
+                Vector letterStart = t.GetBaseline().GetStartPoint();
+                Vector letterEnd = t.GetAscentLine().GetEndPoint();
+                Rectangle letterRect = new Rectangle(letterStart.Get(0), letterStart.Get(1), letterEnd.Get(0) - letterStart.Get(0), letterEnd.Get(1) - letterStart.Get(1));
 
-                //Vector curBaseline = renderInfo.GetBaseline().GetStartPoint();
-                //Vector topRight = renderInfo.GetAscentLine().GetEndPoint();
+                if (letter != " " && !letter.Contains(' '))
+                {
+                    textChunk chunk = new textChunk();
+                    chunk.text = letter;
+                    chunk.rect = letterRect;
+                    chunk.fontFamily = curFont;
+                    chunk.fontSize = (int)curFontSize;
+                    chunk.spaceWidth = t.GetSingleSpaceWidth() / 2f;
 
-
-                //Rectangle rect = new Rectangle(curBaseline.Get(0), curBaseline.Get(1), topRight.Get(0), topRight.Get(1));
-                //float curFontSize = rect.GetHeight();
-                //System.out.println("Text: " + text + " FontSize: " + curFontSize);
+                    objectResult.Add(chunk);
+                }
             }
-        }
+            //foreach (var t in renInfos)
+            //{
+            //    if (string.IsNullOrWhiteSpace(t.GetText()))
+            //        continue;
 
-        public ICollection<EventType> GetSupportedEvents()
-        {
-            return null;
+            //    AddTextRect(t);
+            //}
         }
+        //private void AddTextRect(TextRenderInfo t)
+        //{
+        //    var letterStart = t.GetBaseline().GetStartPoint();
+        //    var letterEnd = t.GetAscentLine().GetEndPoint();
 
+        //    var newTextRect = new TextRect(
+        //        text: t.GetText(),
+        //        l: letterStart.Get(0),
+        //        r: letterEnd.Get(0),
+        //        t: letterEnd.Get(1),
+        //        b: letterStart.Get(1));
+
+        //    _textRects.Add(newTextRect);
+        //}
+    }
+    public class textChunk
+    {
+        public string text { get; set; }
+        public Rectangle rect { get; set; }
+        public string fontFamily { get; set; }
+        public int fontSize { get; set; }
+        public float spaceWidth { get; set; }
     }
 }
