--- a/PdfToXml/Areas/Identity/Pages/Account/Register.cshtml
+++ b/PdfToXml/Areas/Identity/Pages/Account/Register.cshtml
@@ -12,7 +12,7 @@
             <h2>Create a new account.</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="form-floating mb-3">
+            @*<div class="form-floating mb-3">
                 <input asp-for="Input.Name" class="form-control" autocomplete="name" aria-required="true" placeholder="Name" />
                 <label asp-for="Input.Name">Name</label>
                 <span asp-validation-for="Input.Name" class="text-danger"></span>
@@ -21,7 +21,7 @@
                 <textarea asp-for="Input.About" rows="3" class="form-control" autocomplete="about" aria-required="true" placeholder="About you"></textarea>
                 <label asp-for="Input.About">About</label>
                 <span asp-validation-for="Input.About" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-floating mb-3">
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
                 <label asp-for="Input.Email">Email</label>
